Infra/manifests/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: golang-gin-app-service
spec:
  selector:
    app: app
  ports:
    - name: http
      protocol: TCP
      port: 9000
      targetPort: 80

---
apiVersion: v1
kind: Service
metadata:
  name: nginx-nodeport
spec:
  type: NodePort
  selector:
    app: nginx
  ports:
    - name: http
      protocol: TCP
      port: 8080
      targetPort: 80
